# expressive

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
doc/source/: conf.py
expressive/: __init__.py  delayed.py  single.py  specialized.py
scripts/: lint.sh  unittest.sh
tests/unittests/: test_single.py  test_specialized.py
